[project]

name = "pybalu"

description = "Python3 implementation of the computer vision and pattern recognition library Balu."

dynamic = ["version", "readme"]

authors = [
    {name = "Marco Bucchi", email = "mabucchi@uc.cl"},
    {name = "Domingo Mery", email = "domingo.mery@uc.cl"},
]

maintainers = [
    {name = "Christian Pieringer", email = "cppierin@uc.cl"}
]

dependencies = [
    "numpy >= 1.21.0",
    "scipy",
    "Pillow",
    "imageio",
    "scikit-learn",
    "scikit-image",
    "tqdm"
]

license = { file = "LICENSE" }

requires-python = ">=3.10"


[project.optional-dependencies]

dev = [
    "black",
    "flake8",
    "ruff",
    "matplotlib",
    "pytest",
    "twine"
]


[build-system]

requires = ["setuptools", "Cython", "wheel", "numpy"]
build-backend = "setuptools.build_meta"


[tool.setuptools]

packages = [
    "pybalu",
    "pybalu.classification",
    "pybalu.data_selection",
    "pybalu.feature_analysis",
    "pybalu.feature_extraction",
    "pybalu.feature_selection",
    "pybalu.feature_transformation",
    "pybalu.img_processing",
    "pybalu.io",
    "pybalu.misc",
    "pybalu.performance_eval",
]

[tool.setuptools.dynamic]

version = { attr = "pybalu.__version__" }
readme = { file = ["README.md"] }


[tool.black]

line-length = 100
target-version = ["py310", "py311", "py312"]


[tool.ruff]

line-length = 100


[tool.ruff.format]

indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 72


[tool.cibuildwheel]

manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# Build CPython 3.8 - 3.11
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*"]

# Disable building musllinux wheels on all platforms
skip = ["pp*", "*musllinux*"]


[tool.cibuildwheel.macos]

# Build `x86_64` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel cannot be tested in this configuration.
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]

# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]

# On an Windows Intel runner build wheels
archs = ["AMD64", "x86"]